--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <!-- Your navbar will be inserted here -->
 </div>
 
+<div id="main-container" class="container">
+
+</div>
+
 
 
 <!-- Bootstrap JavaScript og Popper.js (påkrævet for nogle Bootstrap-komponenter) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script type="module" src="index.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
