--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
 <!-- Bootstrap JavaScript og Popper.js (påkrævet for nogle Bootstrap-komponenter) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module" src="app.js"></script>
+<script type="module" src="js/services/module.js"></script>
+<script type="module" src="js/services/script.js"></script>
 </body>
 </html>
